# FSync

./: .gitignore  build.bat  build.py  dist.bat  dist.py  pyproject.toml  readme.md  readme.pl.md  requirements.txt  workflow.py
.github/workflows/: publish.yml
fsync/: __init__.py  __main__.py  args.py  diff.py  example.py  main.py  utils.py
