[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsync"
version = "1.0.1"
description = "Local file synchronization for scattered shared libraries"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Xaeian"}]
keywords = ["sync", "files", "libraries", "backup"]
dependencies = ["xaeian"]

[project.optional-dependencies]
diff = ["rich"]
all = ["rich"]

[project.scripts]
pyfsync = "fsync.__main__:main"

[project.urls]
Repository = "https://github.com/Xaeian/FSync"

[tool.setuptools.packages.find]
include = ["fsync*"]
